--- a/FTPZipAndUpload/FTPZipAndUpload.csproj
+++ b/FTPZipAndUpload/FTPZipAndUpload.csproj
@@ -58,7 +58,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
@@ -82,12 +82,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Options.cs" />
-    <Compile Include="ProcessQueue.cs" />
+    <Compile Include="Domain\Options.cs" />
+    <Compile Include="Domain\QueueItem.cs" />
+    <Compile Include="Domain\ProcessQueue.cs" />
+    <Compile Include="Domain\WorkPath.cs" />
+    <Compile Include="Infrastructure\Serializer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security.cs" />
-    <Compile Include="Utilities.cs" />
+    <Compile Include="Infrastructure\Security.cs" />
+    <Compile Include="Infrastructure\Utilities.cs" />
+    <Compile Include="Services\FileService.cs" />
+    <Compile Include="Services\FtpService.cs" />
+    <Compile Include="Services\ZipService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -110,6 +116,11 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="config.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
